Restructure the controllers and models
